Credit_Artifact/main/default/objects/Credit_Card__c/fields/Credit_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Number__c</fullName>
    <externalId>true</externalId>
    <label>Credit Card Number</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>