Credit_Artifact/main/default/objects/Credit_Card__c/fields/Date_Granted__c.field-meta.xml
<CustomField>
    <fullName>Date_Granted__c</fullName>
    <label>Date Granted</label>
    <type>Date</type>
</CustomField>