Credit_Artifact/main/default/objects/Credit_Card__c/fields/Membership_Type__c.field-meta.xml
<CustomField>
    <fullName>Membership_Type__c</fullName>
    <label>Membership Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>